Updated by codie123
Mod: Work , hero animation

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                   As a front-end developer, I specializes in building the visual
                   and interactive components of websites and web applications.
                   Iam skilled in HTML, CSS, JavaScript, and various front-end
-                  frameworks such as React and Angular.
+                  frameworks such as React.
                 </p>
                 s
               </div>
