--- a/contact.html
+++ b/contact.html
@@ -141,6 +141,14 @@
                   ><img src="./assets/icons/gmail.png" alt=""
                 /></a>
               </li>
+              <li>
+                <a
+                  href="https://wa.me/7676451018/?text=Hi"
+                  class="social-icon-cont"
+                  target="_blank"
+                  ><img src="./assets/icons/wtapp.png" alt=""
+                /></a>
+              </li>
             </ul>
           </div>
         </div>
