--- a/index.html
+++ b/index.html
@@ -46,11 +46,26 @@
       <section class="hero">
         <div class="content-wrapper">
           <div class="content">
-            <h1 class="hero-intro">Welcome.</h1>
+            <h1 class="hero-intro">Hi!👋</h1>
+            <h3 class="hero-name">
+              Iam <span class="odd">Mohammed Nazeem</span>
+            </h3>
+            <div class="specialized">
+              <span></span>
+              <h3 class="part-I delay">Front-end Developer</h3>
+            </div>
+            <p class="small-desc">
+              Iam a passionate and skilled frontend developer with a keen eye
+              for detail and a commitment to creating visually appealing and
+              user-friendly websites. With a strong foundation in HTML, CSS, and
+              JavaScript, Bringing creativity and technical expertise to every
+              project.
+            </p>
           </div>
         </div>
       </section>
-      <section class="work">
+
+      <section class="work" id="work">
         <div class="work-wrapper">
           <div class="part-I global-4">
             <div class="work-head">
@@ -61,11 +76,17 @@
           <div class="part-II">
             <div class="cuz-grid">
               <div class="work-card global-4">
-                <a href="" class="work-img-cont"
-                  ><img src="./assets/work/work-1.png" alt="" class="work-img"
+                <a
+                  href="https://zuvi8.com/"
+                  target="_blank"
+                  class="work-img-cont"
+                  ><img
+                    src="./assets/work/zuvi-8 Creatives.gif"
+                    alt=""
+                    class="work-img"
                 /></a>
                 <div class="work-desc">
-                  <h3>50 Project 50 Days</h3>
+                  <h3>Zuvi8 Creatives</h3>
                   <div class="skill">
                     <ul>
                       <li>HTML</li>
@@ -76,22 +97,29 @@
                 </div>
               </div>
               <div class="work-card global-4">
-                <a href=""
-                  ><img src="./assets/work/work-2.png" alt="" class="work-img"
+                <a href="https://www.nejeelah.com/" target="_blank"
+                  ><img
+                    src="./assets/work/Nejeelah design agency.gif"
+                    alt=""
+                    class="work-img"
                 /></a>
                 <div class="work-desc">
-                  <h3>Review Card Component</h3>
+                  <h3>Nejeelah Digital Advertising Company</h3>
                   <div class="skill">
                     <ul>
                       <li>HTML</li>
                       <li>CSS</li>
                       <li>js</li>
+                      <li>WebGl</li>
+                      <li>Three.js</li>
                     </ul>
                   </div>
                 </div>
               </div>
               <div class="work-card global-4">
-                <a href=""
+                <a
+                  href="https://codie123.github.io/Intro-Page_Snap/"
+                  target="_blank"
                   ><img src="./assets/work/work-3.png" alt="" class="work-img"
                 /></a>
                 <div class="work-desc">
@@ -106,7 +134,9 @@
                 </div>
               </div>
               <div class="work-card global-4">
-                <a href=""
+                <a
+                  href="https://codie123.github.io/Single-price-grid-component-grid/"
+                  target="_blank"
                   ><img src="./assets/work/work-4.png" alt="" class="work-img"
                 /></a>
                 <div class="work-desc">
@@ -123,7 +153,7 @@
             </div>
           </div>
           <div class="part-III">
-            <a href="">
+            <a href="./work.html">
               <div class="cuz-gradient-hv global-4">
                 <h3 class="dis-head">Discover More</h3>
               </div>
@@ -131,6 +161,7 @@
           </div>
         </div>
       </section>
+
       <section class="footer">
         <div class="ft-wrapper">
           <div class="ft-content global-4">
