--- a/work.html
+++ b/work.html
@@ -64,11 +64,17 @@
           <div class="part-II-work">
             <div class="cuz-grid">
               <div class="work-card global-4">
-                <a href="" class="work-img-cont"
-                  ><img src="./assets/work/work-1.png" alt="" class="work-img"
+                <a
+                  href="https://zuvi8.com/"
+                  target="_blank"
+                  class="work-img-cont"
+                  ><img
+                    src="./assets/work/zuvi-8 Creatives.gif"
+                    alt="Zuvi8 Creatives gif"
+                    class="work-img"
                 /></a>
                 <div class="work-desc">
-                  <h3>50 Project 50 Days</h3>
+                  <h3>Zuvi8 Creatives</h3>
                   <div class="skill">
                     <ul>
                       <li>HTML</li>
@@ -79,8 +85,55 @@
                 </div>
               </div>
               <div class="work-card global-4">
-                <a href=""
-                  ><img src="./assets/work/work-2.png" alt="" class="work-img"
+                <a
+                  href="https://www.nejeelah.com/"
+                  target="_blank"
+                  class="work-img-cont"
+                  ><img
+                    src="./assets/work/Nejeelah design agency.gif"
+                    alt="Nejeelah gif"
+                    class="work-img"
+                /></a>
+                <div class="work-desc">
+                  <h3>Nejeelah Advertising Agency</h3>
+                  <div class="skill">
+                    <ul>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                      <li>js</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="work-card global-4">
+                <a
+                  href="https://codie123.github.io/Social-component/"
+                  target="_blank"
+                  class="work-img-cont"
+                  ><img
+                    src="./assets/work/Social links profile.gif"
+                    alt="Social Link Profile Gif"
+                    class="work-img"
+                /></a>
+                <div class="work-desc">
+                  <h3>Social links profile</h3>
+                  <div class="skill">
+                    <ul>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                      <li>js</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="work-card global-4">
+                <a
+                  href="https://codie123.github.io/Interactive-card-component/"
+                  target="_blank"
+                  ><img
+                    src="./assets/work/Review card component.gif"
+                    alt="Review Card Component gif"
+                    class="work-img"
                 /></a>
                 <div class="work-desc">
                   <h3>Review Card Component</h3>
@@ -94,7 +147,9 @@
                 </div>
               </div>
               <div class="work-card global-4">
-                <a href=""
+                <a
+                  href="https://codie123.github.io/Intro-Page_Snap/"
+                  target="_blank"
                   ><img src="./assets/work/work-3.png" alt="" class="work-img"
                 /></a>
                 <div class="work-desc">
@@ -109,11 +164,16 @@
                 </div>
               </div>
               <div class="work-card global-4">
-                <a href=""
-                  ><img src="./assets/work/work-4.png" alt="" class="work-img"
+                <a
+                  href="https://codie123.github.io/Testimonial-layout-grid/"
+                  target="_blank"
+                  ><img
+                    src="./assets/work/chrome-capture-2024-1-4.png"
+                    alt=""
+                    class="work-img"
                 /></a>
                 <div class="work-desc">
-                  <h3>Grid Component</h3>
+                  <h3>Testimonial Grid Layout</h3>
                   <div class="skill">
                     <ul>
                       <li>HTML</li>
